--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,7 +1,7 @@
 .contact {
     min-height: 100vh !important;
     height: auto;
-    padding: 0 10% 0;
+    padding: 10% 10% 0;
 
     @media (min-width: 450px) {
         padding: 0;
